# rm-xovi-extensions

./: .gitignore  INSTALL.MD  Makefile  README.MD
.github/workflows/: build-release.yml
fileman/: fileman.xovi
framebuffer-spy/: Makefile  README.MD  framebuffer-spy-rm2.xovi  framebuffer-spy-rmpp.xovi  framebuffer-spy.h  framebuffer-spy.xovi
framebuffer-spy/src/: main.c
qt-command-executor/: .gitignore  main.cpp  qt-command-executor.pro
qt-resource-rebuilder/: .gitignore  Makefile  README.MD  qt-resource-rebuilder.xovi  rules.qrl
qt-resource-rebuilder/src/: main.c  qmldiff.h  systemversion.c  systemversion.h
random-suspend-screen/: random-suspend-screen.xovi
random-suspend-screen/src/: main.c
scripts/: install_allmerged.sh  install_script.sh
webserver-remote/: Makefile  README.MD  main.cpp  notification.qmd  webserver-remote.xovi
webserver-remote/rust-proxy/: Cargo.toml
webserver-remote/rust-proxy/src/: feedback_lib.rs  feedback_test.rs  lib.rs  main.rs  page_blocked.html  page_query.html  proxy.rs
xovi-message-broker/: README.MD  xovi-message-broker.pro  xovi-message-broker.xovi
xovi-message-broker/src/: XoviMessageBroker.h  external.h  main.cpp  messagebroker.cpp  messagebroker.h  pipes.cpp  pipes.h
xovi-setup/: debug  rebuild_hashtable  start  stock
