[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
lazy_static = "1.5.0"
tokio = { version = "1.44.2", features = ["full"] }
